fix(deploy): align container + volume paths at /data
Problem: Railway mounts the volume at /app/storage as root, but the
container runs as 'zamtrust'. Files.createDirectories() fails with
AccessDeniedException, crashing the whole app at startup.

Fix:
- Dockerfile: run as root, create /data/{documents,keys,signatures}
  with permissive permissions
- StorageConfig: log a warning instead of crashing if a directory
  cannot be created — a storage problem should not take down the service
- application-prod.yml: default storage paths now point at /data/*

Volume should now be mounted at /data (not /app/storage).